--- a/app/src/main/res/layout/fragment_add_air.xml
+++ b/app/src/main/res/layout/fragment_add_air.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content" />
             <!--Textview-->
             <EditText
+                android:id="@+id/edtname"
                 android:inputType="text"
                 android:hint=" Name :"
                 android:textSize="@dimen/h2"
@@ -53,6 +54,7 @@
                 android:layout_height="wrap_content" />
             <!--Textview-->
             <EditText
+                android:id="@+id/edtIPAddress"
                 android:inputType="numberDecimal"
                 android:hint=" IP Address:"
                 android:textSize="@dimen/h2"
@@ -72,6 +74,7 @@
                 android:layout_height="wrap_content" />
             <!--Textview-->
             <EditText
+                android:id="@+id/edtMacAddress"
                 android:inputType="text"
                 android:hint=" MAC Address:"
                 android:textSize="@dimen/h2"
