--- a/app/src/main/res/layout/fragment_add_air.xml
+++ b/app/src/main/res/layout/fragment_add_air.xml
@@ -55,7 +55,7 @@
             <!--Textview-->
             <EditText
                 android:id="@+id/edtIPAddress"
-                android:inputType="numberDecimal"
+                android:inputType="text"
                 android:hint=" IP Address:"
                 android:textSize="@dimen/h2"
                 android:layout_width="match_parent"
