--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarControl"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,13 +24,13 @@
             android:layout_height="match_parent">
 
             <!--Title Head-->
-                <TextView
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/h1"
-                    android:text="Daikin Air Condition"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                <!--<TextView-->
+                    <!--android:textColor="@color/colorPrimaryDark"-->
+                    <!--android:textStyle="bold"-->
+                    <!--android:textSize="@dimen/h1"-->
+                    <!--android:text="Daikin Air Condition"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content" />-->
             <!--Title2-->
                 <RelativeLayout
                     android:layout_width="match_parent"
