--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -42,6 +42,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
+                        android:textStyle="bold"
+                        android:id="@+id/txtMode"
                         android:layout_marginTop="@dimen/margin"
                         android:layout_alignParentRight="true"
                         android:textSize="@dimen/h2"
@@ -77,8 +79,6 @@
                 <me.tankery.lib.circularseekbar.CircularSeekBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
                     app:cs_circle_stroke_width="48dp"
                     app:cs_circle_style="butt"
                     app:cs_end_angle="45"
@@ -151,11 +151,13 @@
 
 
                 <Spinner
+                    android:id="@+id/spinnerRate"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
                 <Spinner
+                    android:id="@+id/spinnerdir"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
