--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -77,6 +77,7 @@
 
                 <!--Temp graphic-->
                 <me.tankery.lib.circularseekbar.CircularSeekBar
+                    android:id="@+id/circularSeekbar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cs_circle_stroke_width="48dp"
@@ -109,10 +110,11 @@
                 </LinearLayout>
                 <!--Show temp-->
                 <TextView
+                    android:id="@+id/txtTemp"
                     android:layout_centerInParent="true"
                     android:textStyle="bold"
                     android:textSize="70sp"
-                    android:text="18  ํC"
+                    android:text="@string/unit_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
