--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -127,18 +127,21 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/imvFan"
                     android:layout_marginRight="@dimen/margin"
                     android:src="@drawable/fan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <ImageView
+                    android:id="@+id/imvCool"
                         android:layout_marginRight="@dimen/margin"
                         android:src="@drawable/cool"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
                 <ImageView
+                    android:id="@+id/imvDry"
                     android:src="@drawable/dry"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
