--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="h1">24sp</dimen>
     <dimen name="h2">18sp</dimen>
-    <dimen name="padding">16dp</dimen>
+    <dimen name="h3">14sp</dimen>
+
+    <dimen name="padding">12dp</dimen>
     <dimen name="margin">16dp</dimen>
 </resources>
