--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -110,12 +110,14 @@
                     android:paddingBottom="10dp">
 
                     <ImageView
+                        android:id="@+id/imvplus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="15dp"
                         android:src="@drawable/plus" />
 
                     <ImageView
+                        android:id="@+id/imvminus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
