--- a/app/src/main/res/layout/fragment_list_air.xml
+++ b/app/src/main/res/layout/fragment_list_air.xml
@@ -9,7 +9,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"/>
+        android:layout_height="?android:attr/actionBarSize"/>
 
     <!--<Content-->
     <RelativeLayout
