--- a/app/src/main/res/layout/fragment_list_air.xml
+++ b/app/src/main/res/layout/fragment_list_air.xml
@@ -18,23 +18,17 @@
         android:layout_height="match_parent">
         <ListView
             android:id="@+id/listViewAir"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:orientation="horizontal">-->
+
         <!--<android.support.v7.widget.SwitchCompat-->
             <!--android:id="@+id/switchOnlist1"-->
             <!--android:layout_alignParentRight="true"-->
             <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content" />-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_toRightOf="@+id/listViewAir"/>-->
         <!--</LinearLayout>-->
-
-
-
-
-
+        
     </RelativeLayout>
 
 
