--- a/app/src/main/res/layout/fragment_add_scedule.xml
+++ b/app/src/main/res/layout/fragment_add_scedule.xml
@@ -21,16 +21,17 @@
 
             <!--Space-->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:gravity="right"
-                    android:text=""
-                    android:textSize="@dimen/h2"/>
+                    android:gravity="center"
+                    android:text="schedule"
+                    android:textSize="@dimen/h1"/>
 
 
             </LinearLayout>
