--- a/app/src/main/res/layout/fragment_add_scedule.xml
+++ b/app/src/main/res/layout/fragment_add_scedule.xml
@@ -54,7 +54,7 @@
                     android:textStyle="bold"
                     android:text="25:00"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent" />
 
                 <Button
                     android:id="@+id/bntSetTime"
@@ -88,7 +88,7 @@
                     android:layout_weight="4"
                     android:gravity="right"
                     android:text=""
-                    android:textSize="@dimen/h2"/>
+                    android:textSize="@dimen/h3"/>
 
 
             </LinearLayout>
@@ -150,17 +150,17 @@
 
 
                 <TextView
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text=""
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <Spinner
                     android:id="@+id/spinnermode"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text=""
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
@@ -192,17 +192,17 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:text=""
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <Spinner
                     android:id="@+id/spinnertemp"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:layout_weight="3"
+                    android:layout_weight="1"
                     android:text=""
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
