--- a/app/src/main/res/layout/fragment_setback.xml
+++ b/app/src/main/res/layout/fragment_setback.xml
@@ -62,8 +62,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
             <Spinner
-                android:id="@+id/spinnertemp"
-                android:layout_weight="2"
+                android:id="@+id/spinnersetemp"
+                android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"/>
             <TextView
