--- a/app/src/main/res/layout/fragment_add_scedule.xml
+++ b/app/src/main/res/layout/fragment_add_scedule.xml
@@ -111,6 +111,7 @@
                     android:textStyle="bold" />
 
                 <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/switchOnOff"
                     android:layout_weight="2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
