--- a/app/src/main/res/layout/fragment_scedule.xml
+++ b/app/src/main/res/layout/fragment_scedule.xml
@@ -30,6 +30,11 @@
         android:layout_height="match_parent">
 
         <!--List View-->
+        <ListView
+            android:id="@+id/listViewScedule"
+            android:layout_above="@+id/btnAddScedule"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <!--Button-->
         <Button
