--- a/app/src/main/res/layout/fragment_add_scedule.xml
+++ b/app/src/main/res/layout/fragment_add_scedule.xml
@@ -31,7 +31,7 @@
                     android:layout_weight="4"
                     android:gravity="center"
                     android:text="schedule"
-                    android:textSize="@dimen/h1"/>
+                    android:textSize="@dimen/h2"/>
 
 
             </LinearLayout>
@@ -88,7 +88,7 @@
                     android:layout_weight="4"
                     android:gravity="right"
                     android:text=""
-                    android:textSize="@dimen/h3"/>
+                    android:textSize="10sp"/>
 
 
             </LinearLayout>
