--- a/app/src/main/res/layout/fragment_scedule.xml
+++ b/app/src/main/res/layout/fragment_scedule.xml
@@ -62,7 +62,7 @@
                 <!--enable-->
                 <ListView
                     android:id="@+id/listViewSwitch"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
 
